# manifest-os

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  HANDOFF.md  Logo.txt  README.md
.claude/: launch.json
assets/sddm-theme/: Main.qml  metadata.desktop  theme.conf
docker/: Dockerfile
docs/: strata-design.md
examples/: HOOKS-TO-PROMOTE.md  catppuccin-plasma.json  dev-station.json  gnome.json  hyprland-pro.json  hyprland-rice.json  mcsur-plasma.json  minimal.json  niri-rice.json  sway-pro.json  sync-demo.json  tokyonight-aurora.json  whitesur-plasma.json
examples/reference/: bootstrap.json  conditions-demo.json  dev-station.json  hyprland-pro.json  hyprland-rice.json  jakoolit-hyprland.json  keybindings-demo.json  lock-styles-demo.json  minimal.json  plugins-demo.json  settings-demo.json  snippet-demo.json  strata-demo.json  strata-fedora.json  survey-demo.json  sync-demo.json  theme-demo.json  variables-demo.json
examples/segments/: README.md  niri-screenshot.json  waybar-clock.json
iso/: README.md  build.sh
iso/manifest-os/: packages.x86_64  profiledef.sh
iso/manifest-os/airootfs/etc/: motd  os-release
iso/manifest-os/airootfs/etc/manifest-os/: strata-cnf.sh
iso/manifest-os/airootfs/etc/xdg/fastfetch/: config.jsonc
iso/manifest-os/airootfs/etc/zsh/: zshrc  zshrc.local
iso/manifest-os/airootfs/root/: .zlogin
iso/manifest-os/efiboot/loader/entries/: 01-archiso-linux.conf  02-archiso-speech-linux.conf  04-archiso-text.conf
iso/manifest-os/grub/: grub.cfg  loopback.cfg
iso/manifest-os/syslinux/: archiso_head.cfg  archiso_pxe-linux.cfg  archiso_sys-linux.cfg
marketplace/: DESIGN.md  README.md  SERVER-TODO.md  boot-test.sh  cache-proxy.py  cache-setup.sh  scan.py  server.py
marketplace/web/: index.html
packaging/: README.md  build-repo.sh  gen-key.sh  manifest-os.conf  publish-repo.sh  sign-repo.sh
packaging/keyring/: PKGBUILD  manifest-os-keyring.install  manifest-os-trusted  manifest-os.asc
packaging/pkg/: 95-manifest-export.hook  PKGBUILD  os.manifest.Snapshots.desktop
plugins/: README.md  docker.json  k3s.json  ollama.json  steam.json  tailscale.json
scripts/: audit-examples.sh  audit-vms.sh  boot-flagships.sh  check-manifest.sh
src/: boot.rs  conditions.rs  defaults.rs  desktop.rs  diff.rs  dotfiles.rs  exec.rs  export.rs  files.rs  flatpak.rs  gestures.rs  history.rs  install.rs  installer.rs  kernel.rs  keybindings.rs  lib.rs  logo.txt  main.rs  manifest.rs  pacman.rs  pkglock.rs  plugins.rs  probe.rs  scaling.rs  segment.rs  snippets.rs  strata.rs  survey.rs  system.rs  theming.rs  tui.rs  users.rs  wallpaper.rs
