[package]
name = "manifest"
version = "0.1.0"
edition = "2021"
description = "Declare a complete Arch Linux system in a single manifest.json and reproduce it with one command."
license = "MIT"
repository = "https://github.com/manifest-os/manifest"

[[bin]]
name = "manifest"
path = "src/main.rs"

# The graphical installer — a second front-end over the same engine. Gated
# behind the `gui` feature so the CLI (and Windows `cargo check`) build without
# the GTK toolchain; the ISO build compiles with `--features gui`.
[[bin]]
name = "manifest-gui"
path = "src/bin/manifest-gui.rs"
required-features = ["gui"]

[features]
gui = ["dep:gtk4", "dep:libadwaita"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
gtk4 = { version = "0.9", optional = true }
libadwaita = { version = "0.7", optional = true }

[profile.release]
strip = true
lto = true
codegen-units = 1
