[package]
name = "manifest"
version = "0.1.0"
edition = "2021"
default-run = "manifest"
description = "Declare a complete Arch Linux system in a single manifest.json and reproduce it with one command."
license = "MIT"
repository = "https://github.com/manifest-os/manifest"

[[bin]]
name = "manifest"
path = "src/main.rs"

# The graphical installer — a second front-end over the same engine. Gated
# behind the `gui` feature so the CLI (and Windows `cargo check`) build without
# the GTK toolchain; the ISO build compiles with `--features gui`.
[[bin]]
name = "manifest-gui"
path = "src/bin/manifest-gui/main.rs"
required-features = ["gui"]

# System Snapshots — the friendly desktop app for the installed system: save
# restore points, go back to an earlier one, apply a shared setup. Same GTK
# stack as the installer, gated behind the `gui` feature.
[[bin]]
name = "manifest-center"
path = "src/bin/manifest-center/main.rs"
required-features = ["gui"]

[features]
gui = ["dep:gtk4", "dep:libadwaita", "dep:flate2"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
# Survey field validation (`pattern`). Trimmed to the features we use to keep
# the installer binary small.
regex = { version = "1", default-features = false, features = ["std", "unicode"] }
ratatui = "0.29"
crossterm = "0.28"
# v4_10 enables gtk::FileDialog (the modern async file picker) used by the
# System Snapshots app; libadwaita v1_4 enables MessageDialog / ToolbarView /
# ViewStack. Arch's system libs are far newer, so these are safe to require.
gtk4 = { version = "0.9", optional = true, features = ["v4_10"] }
libadwaita = { version = "0.7", optional = true, features = ["v1_4"] }
# Decompresses the installer's non-English UI language catalogs on demand.
# rust_backend avoids a system zlib dependency on the live ISO's build.
flate2 = { version = "1", default-features = false, features = ["rust_backend"], optional = true }

[profile.release]
strip = true
lto = true
codegen-units = 1
